<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Atakr</string>
    <string name="main_activity_label">Welcome!</string>
    <string name="profile_activity_label">Profile</string>

    <string name="preference_userID_key" translatable="false">templar.atakr.PREFERENCE_USERID_KEY</string>
    <string name="preference_username_key" translatable="false">templar.atakr.PREFERENCE_USERNAME_KEY</string>
    <string name="preference_profile_image_sig" translatable="false">templar.atakr.PREFERENCE_PROFILE_IMAGE_SIG</string>

    <!-- SUPER ACTIVITY STRINGS -->
    <string name="drawer_open">side menu opened</string>
    <string name="drawer_close">side menu closed</string>
    <string name="main_navigation_icon_CD">Your Profile Picture</string>

    <string name="navigation_menu_browse">Browse</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_games">Games</string>
    <string name="navigation_menu_game_genre">Game Genre</string>
    <string name="navigation_menu_video_genre">Video Genre</string>
    <string name="navigation_menu_account">Account</string>
    <string name="navigation_menu_signout">Sign Out</string>
    <string name="navigation_menu_profile">Profile</string>

    <!-- MAIN ACTIVITY STRINGS -->
    <string name="action_settings">Title</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_profile">Profile</string>
    <string name="search_hint">Search Atakr Videos</string>

    <!-- SHARE ACTIVITY STRINGS -->
    <string name="share_profilepicture_CD">Profile Picture</string>
    <string name="share_cardview_thumbnail">Youtube Thumbnail</string>
    <string name="share_cardview_title">Video Title</string>
    <string name="share_cardview_uploader">Uploader</string>
    <string name="share_cardview_views">Views</string>
    <string name="share_atakrTitle">(optional) New Title</string>
    <string name="share_atakrGame">(optional) Game</string>
    <string name="share_button">Post</string>
    <string name="share_posted">Video Posted!</string>
    <string name="share_already_uploaded">This video has already been uploaded</string>

    <!--VIDEO BROWSE FRAGMENT -->
    <string name="video_list_image_CD">Youtube Thumbnail</string>
    <string name="fab_CD">Play this Video</string>

    <!-- PROFILE ACTIVITY STRINGS -->
    <string name="profile_picture_CD">Profile Picture</string>
    <string name="profile_shared_some">Videos Shared</string>
    <string name="profile_shared_none">No Videos Shared</string>
    <string name="profile_followers_some">Followers</string>
    <string name="profile_followers_none">No Followers</string>

    <!--WIDGET -->
    <string name="widget_text">Play Random</string>
    <string name="widget_play_CD">Play a Random Atakr Video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
