<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_browse"
            android:title="@string/navigation_menu_browse">
            <menu>
                <item
                    android:id="@+id/navigation_menu_games"
                    android:title="@string/navigation_menu_games" />
                <item
                    android:id="@+id/navigation_menu_game_genre"
                    android:title="@string/navigation_menu_game_genre" />
                <item
                    android:id="@+id/navigation_menu_video_genre"
                    android:title="@string/navigation_menu_video_genre" />
            </menu>
        </item>

        <item
            android:id="@+id/navigation_menu_account"
            android:title="@string/navigation_menu_account">
            <menu>
                <item
                    android:id="@+id/navigation_menu_profile"
                    android:title="@string/toolbar_profile"/>
                <item
                    android:id="@+id/navigation_menu_signout"
                    android:title="@string/navigation_menu_signout"/>
            </menu>
        </item>
    </group>
</menu>